--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,21 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.openpnp</groupId>
+			<artifactId>opencv</artifactId>
+			<version>[4.3.0,)</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/gov.nist.math/jama -->
+		<dependency>
+			<groupId>gov.nist.math</groupId>
+			<artifactId>jama</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
